<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:paddingTop="?attr/actionBarSize"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="34dp" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Author"
        android:ems="10"
        android:hint="@string/author"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:layout_editor_absoluteX="34dp" />

    <EditText
        android:id="@+id/editTextSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Series"
        android:ems="10"
        android:hint="@string/series"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextAuthor"
        tools:layout_editor_absoluteX="34dp" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Year"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/editTextSeries"
        tools:layout_editor_absoluteX="34dp" />

    <Button
        android:id="@+id/addComicToDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="147dp"
        android:text="@string/title_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFilePath" />

    <EditText
        android:id="@+id/editTextFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="6dp"
        android:autofillHints="File address"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintEnd_toStartOf="@+id/chooseFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextYear" />

    <Button
        android:id="@+id/chooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:text="@string/choose_file"
        app:layout_constraintStart_toEndOf="@+id/editTextFilePath"
        app:layout_constraintTop_toBottomOf="@+id/editTextYear" />

</androidx.constraintlayout.widget.ConstraintLayout>